# Sensitive_Data_Detection-Compliance_Assistant

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BUILD_PROMPT.md  DECISIONS_LOG.md  DEMO_SCRIPT.md  Dockerfile  PROGRESS.md  PROJECT_PLAN.md  README.md  RESULTS.md  VERIFICATION_RESULTS.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  verify.md
.streamlit/: config.toml
data/samples/: golden.txt  pii_sample.csv
scripts/: generate_synthetic_data.py  verify_pipeline.py
src/: __init__.py  audit.py  compliance.py  config.py  models.py
src/classification/: __init__.py  risk.py
src/detection/: __init__.py  engine.py  llm_contextual.py  names.py  ner.py  patterns.py
src/ingestion/: __init__.py  loaders.py  ocr.py
src/llm/: gemini_client.py  prompts.py  rate_limiter.py
src/rag/: chunker.py  embeddings.py  lexical.py  qa.py  reranker.py  store.py
src/redaction/: __init__.py  export.py  masker.py
test_data/scratch/: verification_log.json
test_data/synthetic/: manifest.json  synthetic_data.csv  synthetic_data.txt
tests/: test_aadhaar_fixes.py  test_address_completeness.py  test_audit.py  test_compliance.py  test_config.py  test_detection.py  test_gemini_client.py  test_ingestion.py  test_lexical.py  test_llm_contextual.py  test_manual_samples.py  test_names.py  test_rag.py  test_rate_limiter.py  test_redaction.py  test_reranker.py  test_risk.py  test_verification_fixes.py
