[project]
name = "sensitive-data-assistant"
version = "0.1.0"
description = "Sensitive Data Detection & Compliance Assistant"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Verification scripts intentionally call load_dotenv() before importing `src`
# so the API key is present when settings are first constructed.
"scripts/*" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
